--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <title>Tytuł strony</title>
 </head>
 <body>
+ <h1> This is heading</h1>
  <p>First paragraph</p>
-<p>THis is a new Paragraph</p>
-
+ <p>THis is a new Paragraph</p>
 </body>
 </html>
-
